@@ -169,6 +169,14 @@ public:
     };
 
     /**
+     * All appearance settings related to Find & Replace.
+     */
+    struct FindReplaceAppearance {
+        QString font_family;
+        int font_size;
+    };
+
+    /**
      * The default font to use for rendering Book View/Preview.
      */
     BookViewAppearance bookViewAppearance();
@@ -182,6 +190,8 @@ public:
      * The appearance settings to use for editing in Code View.
      */
     SpecialCharacterAppearance specialCharacterAppearance();
+
+    FindReplaceAppearance findReplaceAppearance();
 
     /**
      * Clear all Book View, Code View and Special Characters settings back to their defaults.
@@ -261,6 +271,8 @@ public slots:
     * Set the default font settings to use for Special Characters popup window
     */
     void setSpecialCharacterAppearance(const SpecialCharacterAppearance &special_character_appearance);
+
+    void setFindReplaceAppearance(const FindReplaceAppearance &appearance);
 
 private:
     /**
